objects/Service__c.object
<CustomObject>
    <description>Object is used to  store service Information.</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Provide the service  Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Deliverable_Type__c</fullName>
        <label>Is Deliverable Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Requirement__c</fullName>
        <label>Option</label>
        <referenceTo>Customer_Requirement__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SER{00000}</displayFormat>
        <label>Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>